Fixing responsive meta tag and overflow in main

--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+main {
+    overflow: hidden;
+}
+
 #product-overview {
     background: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent), 
         url("images/freedom.jpg") left 10% bottom 75%/cover no-repeat border-box, 
